# accountmerge

./: .gitignore  Cargo.toml  README.md  devenv.nix  run_examples.sh
examples/: accounts.ron  initial.journal  rules.rhai  rules.ron  statement1.csv  statement2.csv
src/: accounts.rs  builder.rs  comment.rs  commented.rs  filespec.rs  fingerprint.rs  fmt.rs  fpgen.rs  internal.rs  ledgerutil.rs  main.rs  merge.rs  money.rs  mutcell.rs  output.rs  rule.rs  tags.rs  testutil.rs  tzabbr.rs
src/bank/: input.rs  mod.rs  nationwide.rs  nationwide_csv.rs
src/hledger/: mod.rs  parser.rs
src/importers/: cmd.rs  importer.rs  mod.rs  nationwide.rs  nationwide_csv.rs  nationwide_pdf.rs  paypal_csv.rs  tesseract.rs  tesseract_tsv.rs  testutil.rs  util.rs
src/importers/util/: csv.rs  mod.rs
src/merge/: cmd.rs  matchset.rs  merger.rs  mod.rs  posting.rs  sources.rs  transaction.rs
src/rules/: cmd.rs  mod.rs  predicate.rs  processor.rs  source.rs  table.rs
src/rules/rhai/: mod.rs  types.rs
src/rules/table/: commontypes.rs  ctx.rs  mod.rs  predicate.rs  source.rs
testdata/importers/: nationwide_csv.csv  nationwide_csv.golden.journal  nationwide_csv_5.csv  nationwide_csv_5.golden.journal  nationwide_csv_6.golden.journal  paypal_csv.csv  paypal_csv.golden.journal  paypal_csv_tz_abbrs.csv
