[package]
name = "accountmerge"
version = "0.1.0"
authors = ["John Beisley <johnbeisleyuk@gmail.com>"]
edition = "2018"

[dependencies]
base64 = "0.10"
byteorder = "1"
chrono = "0.4"
csv = "1"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
failure = "0.1"
failure_derive = "0.1"
glob = "0.3"
itertools = "0.8"
lazy_static = "1"
ledger-parser = "3"
regex = "1"
ron = "0.5"
rust_decimal = "1"
serde = "1"
serde_derive = "1"
sha-1 = "0.8.1"
structopt = "0.2"
temporary = "0.6"
typed-generational-arena = "0.2.5"
uuid-b64 = "0.1"

[dependencies.chrono-tz]
version = "0.5"
features = ["serde"]

[dev-dependencies]
goldenfile = "1"
test-case = "0.3"
text-diff = "0.4"
textwrap = "0.11.0"
